changed literally everything, in ONE day

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,19 @@
 cmake_minimum_required(VERSION 3.10.0)
-project(tuxc VERSION 0.1.0 LANGUAGES C)
+project(tuxc VERSION 0.1.0 LANGUAGES C CXX)
 
 set(CMAKE_C_STANDARD 17)
 set(CMAKE_C_STANDARD_REQUIRED ON)
 set(CMAKE_C_EXTENSIONS OFF)
 
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
+
 file(GLOB_RECURSE LIBFILES "lib/*.c")
 
-add_library(tuxc SHARED ${LIBFILES})
+file(GLOB CPPFILES "lib/cpp/*.cpp")
+
+add_library(tuxc SHARED ${LIBFILES} ${CPPFILES})
 target_include_directories(tuxc PUBLIC "include")
 
 target_compile_options(tuxc PRIVATE
